--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,17 +1,17 @@
-name = "toto" # todo
+name = "tolo" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "toto.tehekvpn.filegear-sg.me"
+pattern = "tolo.tehekvpn.filegear-sg.me"
 custom_domain = true
 [[routers]]
-pattern = "support.duolingo.com.toto.tehekvpn.filegear-sg.me"
+pattern = "englishtest-stage-7.duolingo.com.tolo.tehekvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "support.duolingo.com.toto.tehekvpn.filegear-sg.me"
+pattern = "support.duolingo.com.tolo.tehekvpn.filegear-sg.me"
 custom_domain = true
 
 [vars]
