--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,65 +1,23 @@
-name = "javhd" # todo
+name = "sgdo" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "Ava.game.naver.com.javhd.fadzvpnid.filegear-sg.me"
+pattern = "Ava.game.naver.com.sgdo.fadzvpnid.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "Df.game.naver.com.javhd.fadzvpnid.filegear-sg.me"
+pattern = "Df.game.naver.com.sgdo.fadzvpnid.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "Graph.facebook.com.javhd.fadzvpnid.filegear-sg.me"
+pattern = "Graph.facebook.com.sgdo.fadzvpnid.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "v27.tiktokcdn.com.javhd.fadzvpnid.filegear-sg.me"
+pattern = "v27.tiktokcdn.com.sgdo.fadzvpnid.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "englishtest-stage-7.duolingo.com.javhd.fadzvpnid.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "api.zoom.us.javhd.fadzvpnid.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "Account.pmang.game.naver.com.javhd.fadzvpnid.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "quiz.int.vidio.com.javhd.fadzvpnid.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "support.duolingo.com.javhd.fadzvpnid.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "investor.fb.com.javhd.fadzvpnid.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "static.cdninstagram.com.javhd.fadzvpnid.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "support.zoom.us.javhd.fadzvpnid.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "www.pubgmobile.com.javhd.fadzvpnid.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "investors.spotify.com.javhd.fadzvpnid.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "www.sushiroll.co.id.javhd.fadzvpnid.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "games.axis.co.id.javhd.fadzvpnid.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "cdn.appsflyer.com.javhd.fadzvpnid.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "cftxvid.vod.nimo.tv.javhd.fadzvpnid.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "connect.garenanow.com.javhd.fadzvpnid.filegear-sg.me"
+pattern = "englishtest-stage-7.duolingo.com.sgdo.fadzvpnid.filegear-sg.me"
 custom_domain = true
 
 [vars]
