--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "sgdo" # todo
+name = "usdo" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "Ava.game.naver.com.sgdo.fadzvpnid.filegear-sg.me"
+pattern = "usdo.fadzvpnid.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "Df.game.naver.com.sgdo.fadzvpnid.filegear-sg.me"
+pattern = "ava.game.naver.com.usdo.fadzvpnid.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "Graph.facebook.com.sgdo.fadzvpnid.filegear-sg.me"
+pattern = "Graph.facebook.com.usdo.fadzvpnid.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "v27.tiktokcdn.com.sgdo.fadzvpnid.filegear-sg.me"
+pattern = "quiz.int.vidio.com.usdo.fadzvpnid.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "englishtest-stage-7.duolingo.com.sgdo.fadzvpnid.filegear-sg.me"
+pattern = "englishtest-stage-7.duolingo.com.usdo.fadzvpnid.filegear-sg.me"
 custom_domain = true
 
 [vars]
