--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "x4" # todo
+name = "komeng" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "x4.onlyranwal.filegear-sg.me"
+pattern = "komeng.onlyranwal.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "englishtest-stage-7.duolingo.com.x4.onlyranwal.filegear-sg.me"
+pattern = "englishtest-stage-7.duolingo.com.komeng.onlyranwal.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.x4.onlyranwal.filegear-sg.me"
+pattern = "cf.shopee.co.id.komeng.onlyranwal.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cv.shopee.sg.x4.onlyranwal.filegear-sg.me"
+pattern = "cv.shopee.sg.komeng.onlyranwal.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.x4.onlyranwal.filegear-sg.me"
+pattern = "cvs-deo.shopeemobile.com.komeng.onlyranwal.filegear-sg.me"
 custom_domain = true
 
 [vars]
