--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,17 +1,17 @@
-name = "amazon" # todo
+name = "aws" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "amazon.abscelluler.my.id"
+pattern = "aws.abscelluler.my.id"
 custom_domain = true
 [[routes]]
-pattern = "gw.ruangguru.com.amazon.abscelluler.my.id"
+pattern = "gw.ruangguru.com.aws.abscelluler.my.id"
 custom_domain = true
 [[routes]]
-pattern = "104.18.2.2.amazon.abscelluler.my.id"
+pattern = "104.18.2.2.aws.abscelluler.my.id"
 custom_domain = true
 
 [vars]
