--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,32 +1,32 @@
-name = "fslsg" # todo
+name = "Tencent Cloud Computing SG" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "fslsg.kenshivpn.filegear-sg.me"
+pattern = "tccsg.kenshivpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "teams.microsoft.com.fslsg.kenshivpn.filegear-sg.me"
+pattern = "teams.microsoft.com.tccsg.kenshivpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "meetings.googleapis.com.fslsg.kenshivpn.filegear-sg.me"
+pattern = "meetings.googleapis.com.tccsg.kenshivpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "edu.ruangguru.com.fslsg.kenshivpn.filegear-sg.me"
+pattern = "edu.ruangguru.com.tccsg.kenshivpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "beta.zoom.us.fslsg.kenshivpn.filegear-sg.me"
+pattern = "beta.zoom.us.tccsg.kenshivpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "api.zoom.us.fslsg.kenshivpn.filegear-sg.me"
+pattern = "api.zoom.us.tccsg.kenshivpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "store.zoom.us.fslsg.kenshivpn.filegear-sg.me"
+pattern = "store.zoom.us.tccsg.kenshivpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "support.zoom.us.fslsg.kenshivpn.filegear-sg.me"
+pattern = "support.zoom.us.tccsg.kenshivpn.filegear-sg.me"
 custom_domain = true
 
 
