--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,28 +5,28 @@ name = "Tencent Cloud Computing SG" # todo
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "tccsg.kenshivpn.filegear-sg.me"
+pattern = "tccsg.hashoino.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "teams.microsoft.com.tccsg.kenshivpn.filegear-sg.me"
+pattern = "teams.microsoft.com.tccsg.hashoino.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "meetings.googleapis.com.tccsg.kenshivpn.filegear-sg.me"
+pattern = "meetings.googleapis.com.tccsg.hashoino.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "edu.ruangguru.com.tccsg.kenshivpn.filegear-sg.me"
+pattern = "edu.ruangguru.com.tccsg.hashoino.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "beta.zoom.us.tccsg.kenshivpn.filegear-sg.me"
+pattern = "beta.zoom.us.tccsg.hashoino.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "api.zoom.us.tccsg.kenshivpn.filegear-sg.me"
+pattern = "api.zoom.us.tccsg.hashoino.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "store.zoom.us.tccsg.kenshivpn.filegear-sg.me"
+pattern = "store.zoom.us.tccsg.hashoino.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "support.zoom.us.tccsg.kenshivpn.filegear-sg.me"
+pattern = "support.zoom.us.tccsg.hashoino.filegear-sg.me"
 custom_domain = true
 
 
