--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "jp" # todo
+name = "mmg" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "poe.garena.com.jp.zellyvpn.filegear-sg.me"
+pattern = "blog.webex.com.yourdomain.com.mmg.zellyvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "poe.garena.com.jp.zellyvpn.filegear-sg.me"
+pattern = "blog.webex.com.yourdomain.com.mmg.zellyvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = ".poe.garena.com.jp.zellyvpn.filegear-sg.me"
+pattern = ".blog.webex.com.yourdomain.com.mmg.zellyvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "poe.garena.com.jp.zellyvpn.filegear-sg.me"
+pattern = "blog.webex.com.yourdomain.com.mmg.zellyvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "poe.garena.com.jp.zellyvpn.filegear-sg.me"
+pattern = "blog.webex.com.yourdomain.com.mmg.zellyvpn.filegear-sg.me"
 custom_domain = true
 
 [vars]
