--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "komeng" # todo
+name = "free" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "komeng.onlyranwal.filegear-sg.me"
+pattern = "free.x4official.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "blog.webex.com.komeng.onlyranwal.filegear-sg.me"
+pattern = "blog.webex.com.free.x4official.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.komeng.onlyranwal.filegear-sg.me"
+pattern = "cf.shopee.co.id.free.x4official.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cv.shopee.sg.komeng.onlyranwal.filegear-sg.me"
+pattern = "cv.shopee.sg.free.x4official.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.komeng.onlyranwal.filegear-sg.me"
+pattern = "cvs-deo.shopeemobile.com.free.x4official.filegear-sg.me"
 custom_domain = true
 
 [vars]
