--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,20 +4,20 @@ name = "indo" # todo
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
-routes
+[[routes]]
 pattern = "indo.santosvpn.my.id"
 custom_domain = true
-routes
-pattern = "api.instagram.com.indo.santosvpn.my.id"
+[[routes]]
+pattern = "df.game.naver.com.indo.santosvpn.my.id"
 custom_domain = true
-routes
+[[routes]]
 pattern = "ava.game.naver.com.indo.santosvpn.my.id"
 custom_domain = true
-routes
+[[routes]]
 pattern = "quiz.staging.vidio.com.indo.santosvpn.my.id"
 custom_domain = true
-routes
-pattern = "zaintest.vuclip.com.indo.santosvpn.my.id"
+[[routes]]
+pattern = "graph.instagram.com.indo.santosvpn.my.id"
 custom_domain = true
 
 [vars]
