--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "trojan" # todo
+name = "fr" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "trojan.fadztunnell.my.id"
+pattern = "fr.fadztunnell.my.id"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.trojan.fadztunnell.my.id"
+pattern = "ava.game.naver.com.fr.fadztunnell.my.id"
 custom_domain = true
 [[routes]]
-pattern = "blog.sushiroll.co.id.trojan.fadztunnell.my.id"
+pattern = "blog.sushiroll.co.id.fr.fadztunnell.my.id"
 custom_domain = true
 [[routes]]
-pattern = "blog.webex.com.trojan.fadztunnell.my.id"
+pattern = "blog.webex.com.fr.fadztunnell.my.id"
 custom_domain = true
 [[routes]]
-pattern = "www.sushiroll.co.id.trojan.fadztunnell.my.id"
+pattern = "www.sushiroll.co.id.fr.fadztunnell.my.id"
 custom_domain = true
 
 [vars]
