--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "sg" # todo
+name = "free" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "sg.fadztunnell.my.id"
+pattern = "free.fadztunnell.my.id"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.sg.fadztunnell.my.id"
+pattern = "ava.game.naver.com.free.fadztunnell.my.id"
 custom_domain = true
 [[routes]]
-pattern = "blog.sushiroll.co.id.sg.fadztunnell.my.id"
+pattern = "blog.sushiroll.co.id.free.fadztunnell.my.id"
 custom_domain = true
 [[routes]]
-pattern = "blog.webex.com.sg.fadztunnell.my.id"
+pattern = "blog.webex.com.free.fadztunnell.my.id"
 custom_domain = true
 [[routes]]
-pattern = "www.sushiroll.co.id.sg.fadztunnell.my.id"
+pattern = "www.sushiroll.co.id.free.fadztunnell.my.id"
 custom_domain = true
 
 [vars]
