--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,13 +1,18 @@
-name = "usbaxet" # todo
+name = "belnet" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "usbaxet.reinzvpn.my.id"
+pattern = "sgsfl.reinzvpn.my.id"
 custom_domain = true
-
+[[routes]]
+pattern = "teams.microsoft.com.sgsfl.reinzvpn.my.id"
+custom_domain = true
+[[routes]]
+pattern = "meetings.googleapis.com.sgsfl.reinzvpn.my.id"
+custom_domain = true
 
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
