--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "id-gllc" # todo
+name = "fr-gllc" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
@@ -9,17 +9,9 @@ compatibility_date = "2023-05-26"
 pattern = "id-gllc.ershavpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.id-gllc.ershavpn.filegear-sg.me"
+pattern = "vidio.com.fr-gllc.ershavpn.filegear-sg.me"
 custom_domain = true
-[[routes]]
-pattern = "cf.shopee.co.id.id-gllc.ershavpn.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "cv.shopee.sg.id-gllc.ershavpn.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "cvs-deo.shopeemobile.com.id-gllc.ershavpn.filegear-sg.me"
-custom_domain = true
+
 
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
