--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "fr-gllc" # todo
+name = "fr-server" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
@@ -6,10 +6,10 @@ main = "_worker.js"
 compatibility_date = "2023-05-26"
 
 [[routes]]
-pattern = "fr-gllc.ershavpn.filegear-sg.me"
+pattern = "fr-server.ershavpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "vidio.com.fr-gllc.ershavpn.filegear-sg.me"
+pattern = "vidio.com.fr-server.ershavpn.filegear-sg.me"
 custom_domain = true
 
 
