--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,50 @@
-name = "us" # todo
+name = "idfadz" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "us.tunneltech.filegear-sg.me"
+pattern = "idfadz.fadztunnell.my.id"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.us.tunneltech.filegear-sg.me"
+pattern = "ava.game.naver.com.idfadz.fadztunnell.my.id"
 custom_domain = true
 [[routes]]
-pattern = "blog.sushiroll.co.id.us.tunneltech.filegear-sg.me"
+pattern = "blog.sushiroll.co.id.idfadz.fadztunnell.my.id"
 custom_domain = true
 [[routes]]
-pattern = "blog.webex.com.us.tunneltech.filegear-sg.me"
+pattern = "blog.webex.com.idfadz.fadztunnell.my.id"
 custom_domain = true
 [[routes]]
-pattern = "www.sushiroll.co.id.us.tunneltech.filegear-sg.me"
+pattern = "www.sushiroll.co.id.idfadz.fadztunnell.my.id"
+custom_domain = true
+[[routes]]
+pattern = "app.gopay.co.id.idfadz.fadztunnell.my.id"
+custom_domain = true
+[[routes]]
+pattern = "investor.fb.com.idfadz.fadztunnell.my.id"
+custom_domain = true
+[[routes]]
+pattern = "investor.spotify.com.idfadz.fadztunnell.my.id"
+custom_domain = true
+[[routes]]
+pattern = "cdn.appsflyer.com.idfadz.fadztunnell.my.id"
+custom_domain = true
+[[routes]]
+pattern = "graph.facebook.com.idfadz.fadztunnell.my.id"
+custom_domain = true
+[[routes]]
+pattern = "104.26.6.171.idfadz.fadztunnell.my.id"
+custom_domain = true
+[[routes]]
+pattern = "app.genflix.co.id.idfadz.fadztunnell.my.id"
+custom_domain = true
+[[routes]]
+pattern = "104.18.20.226.idfadz.fadztunnell.my.id"
+custom_domain = true
+[[routes]]
+pattern = "chat.sociomile.com.idfadz.fadztunnell.my.id"
 custom_domain = true
 
 [vars]
