--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "sg-ovh" # todo
+name = "indo-gcp" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "ovh.crotjanda.filegear-sg.me"
+pattern = "indogcp.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "df.game.naver.com.ovh.crotjanda.filegear-sg.me"
+pattern = "df.game.naver.com.indogcp.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "care.pmang.game.naver.com.ovh.crotjanda.filegear-sg.me"
+pattern = "care.pmang.game.naver.com.indogcp.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "bill.neowiz.com.ovh.crotjanda.filegear-sg.me"
+pattern = "bill.neowiz.com.indogcp.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.ovh.crotjanda.filegear-sg.me"
+pattern = "ava.game.naver.com.indogcp.crotjanda.filegear-sg.me"
 custom_domain = true
 
 [vars]
