--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,19 +5,19 @@ name = "sg-contabo" # todo
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "contabo.crotjanda.filegear-sg.me"
+pattern = "alibaba.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "df.game.naver.com.contabo.crotjanda.filegear-sg.me"
+pattern = "carrier.webex.com.alibaba.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "care.pmang.game.naver.com.contabo.crotjanda.filegear-sg.me"
+pattern = "englishtest-stage-7.duolingo.com.alibaba.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "bill.neowiz.com.contabo.crotjanda.filegear-sg.me"
+pattern = "blog.webex.com.yourdomain.com.alibaba.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.contabo.crotjanda.filegear-sg.me"
+pattern = "blog.webex.com.alibaba.crotjanda.filegear-sg.me"
 custom_domain = true
 
 [vars]
