--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "sg-contabo" # todo
+name = "sg-eduisat-amz" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "alibaba.crotjanda.filegear-sg.me"
+pattern = "amazon.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "carrier.webex.com.alibaba.crotjanda.filegear-sg.me"
+pattern = "carrier.webex.com.amazon.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "englishtest-stage-7.duolingo.com.alibaba.crotjanda.filegear-sg.me"
+pattern = "englishtest-stage-7.duolingo.com.amazon.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "blog.webex.com.yourdomain.com.alibaba.crotjanda.filegear-sg.me"
+pattern = "blog.webex.com.yourdomain.com.amazon.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "blog.webex.com.alibaba.crotjanda.filegear-sg.me"
+pattern = "blog.webex.com.amazon.crotjanda.filegear-sg.me"
 custom_domain = true
 
 [vars]
