--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "sg-xcl-ovhmex" # todo
+name = "sg-xcl-do1" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "ovhmexxcl.crotjanda.filegear-sg.me"
+pattern = "do1xcl.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "df.game.naver.com.ovhmexxcl.crotjanda.filegear-sg.me"
+pattern = "df.game.naver.com.do1xcl.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "care.pmang.game.naver.com.ovhmexxcl.crotjanda.filegear-sg.me"
+pattern = "care.pmang.game.naver.com.do1xcl.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "bill.neowiz.com.ovhmexxcl.crotjanda.filegear-sg.me"
+pattern = "bill.neowiz.com.do1xcl.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.ovhmexxcl.crotjanda.filegear-sg.me"
+pattern = "ava.game.naver.com.do1xcl.crotjanda.filegear-sg.me"
 custom_domain = true
 
 [vars]
