--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "amazon" # todo
+name = "sg-zon" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "amazon.santosvpn.my.id"
+pattern = "sg-zon.sant.my.id"
 custom_domain = true
 [[routes]]
-pattern = "df.game.naver.com.amazon.santosvpn.my.id"
+pattern = "df.game.naver.com.sg-zon.sant.my.id"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.amazon.santosvpn.my.id"
+pattern = "ava.game.naver.com.sg-zon.sant.my.id"
 custom_domain = true
 [[routes]]
-pattern = "quiz.staging.vidio.com.amazon.santosvpn.my.id"
+pattern = "quiz.staging.vidio.com.sg-zon.sant.my.id"
 custom_domain = true
 [[routes]]
-pattern = "graph.instagram.com.amazon.santosvpn.my.id"
+pattern = "graph.instagram.com.sg-zon.sant.my.id"
 custom_domain = true
 
 [vars]
@@ -27,4 +27,4 @@ custom_domain = true
 # NODE_ID = "1"
 # API_TOKEN = "example_dev_token"
 # API_HOST = "api.v2board.com"
-UUID = "950ea1a8-b48c-425e-bf59-128e7723f68c"
+UUID = "1e0832d6-d7b5-4731-9efe-40ceef4b590f"
